--- a/app/src/main/res/layout/fragment_profilefragment.xml
+++ b/app/src/main/res/layout/fragment_profilefragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,7 +8,6 @@
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".activity.ProfileActivity">
@@ -33,20 +33,20 @@
             app:layout_constraintTop_toBottomOf="@+id/topView" />
 
         <TextView
+            android:id="@+id/etDisplayName"
             android:layout_width="168dp"
             android:layout_height="43dp"
             android:layout_marginTop="12dp"
-            android:text="Cong Phong"
             android:textAlignment="center"
             android:textColor="#F3F2F2"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_image"></TextView>
+            app:layout_constraintTop_toBottomOf="@+id/etAvatar"></TextView>
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profile_image"
+            android:id="@+id/etAvatar"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="16dp"
@@ -60,13 +60,12 @@
 
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/etEmail"
             android:layout_width="315dp"
             android:layout_height="54dp"
             android:layout_marginTop="24dp"
             android:drawableStart="@drawable/ic_email"
             android:padding="10dp"
-            android:text="bacongphong99"
             android:textAlignment="center"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -74,18 +73,17 @@
             app:layout_constraintTop_toBottomOf="@+id/view3" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/etPhone"
             android:layout_width="315dp"
             android:layout_height="54dp"
             android:layout_marginTop="40dp"
             android:drawableStart="@drawable/ic_phone"
             android:padding="10dp"
-            android:text="0981176551"
             android:textAlignment="center"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView1" />
+            app:layout_constraintTop_toBottomOf="@+id/etEmail" />
 
         <Button
             android:id="@+id/btnLogout"
