--- a/app/src/main/res/layout/fragment_saved_activity.xml
+++ b/app/src/main/res/layout/fragment_saved_activity.xml
@@ -6,10 +6,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.SavedFragment">
+
+    <fragment
+        android:id="@+id/login_fragment"
+        android:name="com.example.firebaseis1313.fragment.LoginFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <View
         android:id="@+id/topView"
         android:layout_width="0dp"
         android:layout_height="180dp"
+        android:layout_marginTop="4dp"
         android:background="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
