--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -21,6 +21,7 @@
         android:layout_height="100dp"
         android:background="@drawable/ic_waveregis"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topView" />
 
@@ -29,13 +30,12 @@
         android:layout_width="96dp"
         android:layout_height="46dp"
         android:layout_marginTop="172dp"
+        android:background="@drawable/round_bg"
         android:backgroundTint="@color/colorPrimary"
         android:text="Hủy"
         app:layout_constraintEnd_toStartOf="@+id/btnApply"
-        app:layout_constraintHorizontal_bias="0.587"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar2"
-        android:background="@drawable/round_bg"/>
+        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
 
     <TextView
         android:id="@+id/txtOnclick"
@@ -86,13 +86,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="172dp"
+        android:layout_marginEnd="100dp"
+        android:background="@drawable/round_bg"
         android:backgroundTint="@color/colorPrimary"
         android:text="Apply"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.702"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar2"
-        android:background="@drawable/round_bg"/>
+        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
 
     <SeekBar
         android:id="@+id/seekBar2"
